--- a/traefik/traefik.yml
+++ b/traefik/traefik.yml
@@ -1,12 +1,13 @@
+api:
+  dashboard: true
+  insecure: true 
+
 entryPoints:
   web:
     address: ":80"
-  dashboard:
-    address: ":8080"
+  traefik:
+    address: ":8080" 
 
 providers:
   docker:
     exposedByDefault: false
-
-api:
-  dashboard: true
