--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   app:
@@ -15,8 +13,17 @@ services:
       - db
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.app.rule=PathPrefix(`/api`, `/health`)"
-      - "traefik.http.services.app.loadbalancer.server.port=5000"
+
+      # Pour l'API
+      - "traefik.http.routers.todo-api.rule=Host(`localhost`) && PathPrefix(`/api`)"
+      - "traefik.http.routers.todo-api.entrypoints=web"
+      - "traefik.http.services.todo.loadbalancer.server.port=5000"
+
+      # Pour les métriques
+      - "traefik.http.routers.todo-metrics.rule=Host(`localhost`) && Path(`/metrics`)"
+      - "traefik.http.routers.todo-metrics.entrypoints=web"
+      - "traefik.http.services.todo.loadbalancer.server.port=5000"
+
     networks:
       - backend
       - traefik
@@ -29,7 +36,7 @@ services:
       start_period: 10s
 
   db:
-    image: postgres:15
+    image: postgres:17.5
     restart: always
     volumes:
       - db_data:/var/lib/postgresql/data
@@ -58,6 +65,7 @@ services:
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik/traefik.yml:/etc/traefik/traefik.yml
     networks:
       - traefik
 
